<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">애브리 웨어</string>
    <string name="notice_setting" tools:ignore="ExtraTranslation">알림 설정</string>
    <string name="user_setting">사용자 설정</string>
    <string name="clean_notice">청정관리 알림</string>
    <string name="laundry_notice">세탁물 알림</string>
    <string name="ok_button">설정 완료</string>
    <string name="ok_button2">수정 완료</string>
    <string name="dust">미세먼지</string>
    <string name="humidity">습도</string>
    <string name="auto_start">자동실행</string>
    <string name="res_start">예약실행</string>
    <string name="per">%</string>
    <string name="menu">메뉴</string>
    <string name="ok_button3">등록 하기</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>





</resources>
