<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <Switch
        android:id="@+id/Clean_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:checked="true"
        android:text="@string/clean_notice"
        android:switchMinWidth="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:track="@drawable/swith1"
        android:thumb="@drawable/swith_thumb"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Clean_notice"
        android:layout_marginTop="10dp"
        android:background="#BDBDBD"/>



    <Switch
        android:id="@+id/Laundry_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/laundry_notice"
        android:switchMinWidth="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Clean_notice"
        android:layout_marginTop="50dp"
        android:track="@drawable/swith1"
        android:thumb="@drawable/swith_thumb"
        />

    <TimePicker
        android:timePickerMode="spinner"
        android:id="@+id/time_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/Laundry_notice"
        app:layout_constraintRight_toRightOf="@id/Laundry_notice"
        android:layout_marginBottom="50dp"

        />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/time_setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/ok_button"



            android:background="@drawable/btn_size"
            android:textColor="@color/colorWhite"

            />




    <include
        layout="@layout/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</androidx.constraintlayout.widget.ConstraintLayout>