<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/menu_upbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/colorMain"
        android:text="메뉴"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="30dp"

        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="580dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_upbar"
        android:orientation="vertical"
        android:gravity ="center"
        android:fillViewport="true"
        android:layout_marginTop="0dp"

        >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvBluetoothStatus"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:text="status"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btnBluetoothOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="블루투스 ON"
             />

        <Button
            android:id="@+id/btnBluetoothOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="블루투스 OFF"
          />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="내옷장 연결하기"
        />
        <TextView
            android:id="@+id/tvReceiveData"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:text="Receive1"
            />




        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/im2"/>

//세탁물리스트
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/lan_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lanlist"
                android:layout_width="fill_parent"
                android:layout_height="550dp"
                android:layout_marginTop="60dp" />


        </LinearLayout>

        <Button
            android:id="@+id/LED1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LED 켜기"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/LED2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/btn_size"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="60dp"
            />

        <Button
            android:text="LED 끄기"
            android:id="@+id/LED2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/LED1"
            android:background="@drawable/btn_size"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="60dp"

            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_Cloth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


</androidx.constraintlayout.widget.ConstraintLayout>


        //청정관리
    <TextView
        android:id="@+id/care_img"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/im4"
        />
//미세먼지
<LinearLayout
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/dust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dust"
        android:textSize="30dp"
        android:layout_marginLeft="70dp"/>

    <TextView
        android:id="@+id/dust_persent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:id="@+id/per1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/per"
        android:layout_marginLeft="30dp"
        />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/smile"
        app:layout_constraintTop_toBottomOf="@id/dust"
        app:layout_constraintTop_toTopOf="@id/dust"
        app:layout_constraintLeft_toRightOf="@id/per1"
        android:layout_marginLeft="15dp"
        />

</LinearLayout>

        //온습도
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="30dp"
                android:layout_marginLeft="70dp"
                />


            <TextView
                android:id="@+id/hum_persent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:layout_marginLeft="90dp"

                />

            <TextView
                android:id="@+id/per2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/per"
                />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/bad"
                android:layout_marginLeft="15dp"
                />


        </LinearLayout>  //습도 까지

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hum"
            android:layout_marginTop="40dp"
            android:background="#BDBDBD"/>

        <Switch
            android:id="@+id/Clean_auto"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:checked="true"
            android:text="자동 실행:"
            android:switchMinWidth="100dp"
            android:track="@drawable/swith1"
            android:thumb="@drawable/swith_thumb"
          android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            />
        //예약하기
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp">


            <Button
                android:id="@+id/res_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_size"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="65dp"
                android:text="START"
                />

            <Button
                android:id="@+id/res_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_size"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="50dp"
                android:text="STOP"
                />

            </LinearLayout>  //예약하기 까지












    </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>